--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div class="calculator">
         <input type="text" id="display" placeholder="0" readonly>
         <div class="num-pad">
-            <button onclick="clearDisplay()">AC</button> <!-- Clear All button -->
+            <button onclick="clearDisplay()">AC</button> 
             <button onclick="deleteLast()">←</button>
             <button onclick="appendOperator('/')">/</button>
             <button onclick="appendOperator('*')">x</button>
